# open-cv-imgui

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  build.sh  imgui.ini  vcpkg-configuration.json  vcpkg.json
.cache/clangd/index/: Mesh.cpp.BB0F336BC336B5DA.idx  Mesh.h.59FCE0BB2003DC8F.idx  OrthoCamera.cpp.EFB345E601251E30.idx  OrthoCamera.hpp.169AE62BD2540321.idx  PerspectiveCamera.cpp.BBA8AB5BCD88F2A3.idx  PerspectiveCamera.hpp.B1B5FE9829E5B7E1.idx  PointLight.cpp.591EF2325A1C525A.idx  PointLight.hpp.216879CDB9FB52F2.idx  Renderer.hpp.93CF13C56D06F740.idx  _fixes.hpp.67EDB3EF5EF201E7.idx  _vectorize.hpp.53891325D16F2AA8.idx  bezier.cpp.884F4E2D151BF73D.idx  bezier.hpp.80C4B5E95628BCD8.idx  camera.cpp.5D425682B6FC9712.idx  camera.hpp.465E91D503D93655.idx  common.hpp.768E961BBED2D384.idx  compute_common.hpp.9FAE66EF1E9EC30F.idx  compute_vector_decl.hpp.1D5F69032D189100.idx  compute_vector_relational.hpp.403CF64A33688D0F.idx  constants.hpp.9731F3726DABB63F.idx  constants.inl.44347CFB33A2B00D.idx  docking.cpp.3DB5B022026DD9C3.idx  epsilon.hpp.F1B74BD18B521747.idx  epsilon.inl.AC8E6733B1B1AFD4.idx  exponential.hpp.B526C06D89F72684.idx  func_common.inl.2AE53DBD984FF34D.idx  func_exponential.inl.319BC609D82A3639.idx  func_geometric.inl.2D10362EEBBD4122.idx  func_integer.inl.AF7505E0D5BEF45A.idx  func_matrix.inl.1EBE2B9FDF7A5BA2.idx  func_packing.inl.DF6B7F11822A8533.idx  func_trigonometric.inl.EA658F61824D365A.idx  func_vector_relational.inl.3AD615584DB19793.idx  fwd.hpp.FD37A26C5A3F735D.idx  geometric.hpp.A03625B337462CEA.idx  glm.hpp.3840A66735246EEC.idx  helper.cpp.2942C39972456F6C.idx  imconfig.h.523E55905B956D7D.idx  imgui.cpp.A2D7130A54004EEE.idx  imgui.h.6CAE2EE1CF03841B.idx  (+185 more)
.github/workflows/: static.yml
libs/: stl.h  tiny_obj_loader.h
libs/emscripten/: emscripten_mainloop_stub.h
old/: camera.cpp  camera.hpp  docking.cpp  quaternion.hpp  test.cpp  transform.hpp
other/: main.cpp
python_examples/: mesh.py  renderer.py
src/: Makefile  Makefile.emscripten  Mesh.cpp  Mesh.h  PhongShading_fshader.frag  PhongShading_vshader.vert  PointLight.cpp  PointLight.hpp  Renderer.cpp  Renderer.hpp  docking.cpp  helper.cpp  main.cpp  mesh.cpp  mesh.hpp  new.cpp  open_cv_web.cpp  quaternion.cpp  suzanne.stl  test.cpp  transform.cpp
src/models/: unit_sphere.stl
src/shaders/: BasicPS.frag  BasicVS.vert  LightPS.frag  PhongShading_fshader.frag  PhongShading_vshader.vert
src/web/: index.js  index.wasm
